--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@google/generative-ai": "^0.15.0",
     "@neondatabase/serverless": "^0.9.4",
     "@radix-ui/react-collapsible": "^1.1.0",
@@ -20,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.32.0",
+    "framer-motion": "^11.3.8",
     "lucide-react": "^0.408.0",
     "moment": "^2.30.1",
     "next": "14.2.5",
@@ -27,8 +31,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-speech-to-text": "^0.8.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-webcam": "^7.2.0",
     "sonner": "^1.5.0",
+    "swiper": "^11.1.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0"
